<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 Yordan P. Dieguez <ypdieguez@tuta.io>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/TextView"
            android:text="@string/to_create_the_contact_icons" />

        <TextView
            style="@style/TextView"
            android:text="@string/choose_method" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_contact_photo_manager"
                style="@style/RadioButton"
                android:checked="true"
                android:text="@string/contact_photo_manager" />

            <RadioButton
                android:id="@+id/rb_letter_tile_drawable"
                style="@style/RadioButton"
                android:text="@string/letter_tile_drawable" />
        </RadioGroup>

        <TextView
            style="@style/TextView"
            android:text="@string/choose_view" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_material_quick_contact_badge"
                style="@style/RadioButton"
                android:checked="true"
                android:text="@string/material_quick_contact_badge" />

            <RadioButton
                android:id="@+id/rb_quick_contact_badge"
                style="@style/RadioButton"
                android:text="@string/quick_contact_badge" />

            <RadioButton
                android:id="@+id/rb_image_view"
                style="@style/RadioButton"
                android:text="@string/image_view" />
        </RadioGroup>

        <TextView
            style="@style/TextView"
            android:text="@string/choose_shape" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_circle"
                style="@style/RadioButton"
                android:checked="true"
                android:text="@string/circle" />

            <RadioButton
                android:id="@+id/rb_square"
                style="@style/RadioButton"
                android:text="@string/square" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onButtonClicked"
            android:text="@string/show_me" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>